--- a/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/src/app/components/user-dashboard/user-dashboard.component.html
@@ -1,14 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-         
-               
-                  <app-post-look></app-post-look>
-           
-
-
+            <app-post-look></app-post-look>
         </div>
         <div class="col-md-4">
+            <app-side-bar></app-side-bar>
             <app-subquery-side-bar></app-subquery-side-bar>
         </div>
     </div>
