--- a/src/app/components/shared/subquery-side-bar/subquery-side-bar.component.scss
+++ b/src/app/components/shared/subquery-side-bar/subquery-side-bar.component.scss
@@ -12,3 +12,12 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.heading{
+    color: black; 
+    font-weight: bold;
+    text-align: center;
+    margin: 5px;
+    padding: 10px;
+    font-size: larger;
+}
