--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,39 @@
-<p>home works!</p>
-<h1>Rahul</h1>
+<div class="container-fluid p-0 m-0">
+    <div class="row">
+        <div class="col">
+            <!--Main Navigation-->
+<header class="intro-header">
+    <!-- Intro Section -->
+    <div class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url(https://mdbootstrap.com/img/Photos/Others/img%20%2848%29.jpg);">
+      <div class="full-bg-img mask rgba-black-light">
+        <div class="container ">
+          <div class="row pt-5 mt-5 w-100" style="padding-top: 300px;">
+            <div class="col-md-12" style="padding-top: 150px;">
+              <div class=" text-center">
+                <h2 class="h1  h1-reponsive white-text font-up font-bold mb-3 wow fadeInDown" data-wow-delay="0.3s"><strong>Minimalist
+                    intro</strong></h2>
+                <hr class="hr-light mt-4 wow fadeInDown" data-wow-delay="0.4s">
+                <h5 class="font-up mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Photography &
+                    design</strong></h5>
+                <a mdbBtn color="white"  class="wow fadeInDown waves-light" data-wow-delay="0.4s"
+                  mdbWavesEffect>portfolio</a>
+                <a mdbBtn color="white"class="wow fadeInDown waves-light" data-wow-delay="0.4s"
+                  mdbWavesEffect>About me</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  </header>
+  <!--Main Navigation-->
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <app-footer></app-footer>
+        </div>
+    </div>
+</div>
