--- a/src/app/components/shared/subquery-side-bar/subquery-side-bar.component.html
+++ b/src/app/components/shared/subquery-side-bar/subquery-side-bar.component.html
@@ -7,7 +7,7 @@
         <a routerLink ="/view-subquery/{{s.id}}">{{ s.name }}</a>
         
     </li>
-    <div style="text-align: center;" *ngIf="displayAll">
+    <div  style="text-align: center;  margin-top: 10px;" *ngIf="displayAll">
         <a style="font-weight: bold;" routerLink="/view-subquery">View All</a>
     </div>
 </mat-card>
