--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,7 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
 background-color: #DAE0E6;
 }
+
+.main-color{
+    color: #03a9f4;
+}
