--- a/src/app/components/shared/post-look/post-look.component.html
+++ b/src/app/components/shared/post-look/post-look.component.html
@@ -1,5 +1,5 @@
 <!-- Display Posts-->
-<mat-card class="row  post" *ngFor="let post of posts" >
+<mat-card class="row  post" *ngFor="let post of posts.slice().reverse()" >
 
 
   <!-- Section to Display Post Information-->
