--- a/src/app/components/shared/side-bar/side-bar.component.html
+++ b/src/app/components/shared/side-bar/side-bar.component.html
@@ -1,9 +1,20 @@
 <mat-card class="sidebar">
-    <div style="height: 60%;">Welcome To AskMe.com</div>
-    <div class="a">
-        <button class="mybutton m-2" mat-raised-button color="primary" (click)="goToCreatePost()">Create Question</button>        
+    <div style="height: 60%;">
+        <mdb-card style="background-image: url('https://mdbootstrap.com/img/Photos/Others/gradient1.jpg')">
+            <div class="text-white text-center py-2 px-4 my-5">
+              <div>
+                <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Welcome To AskMe.com</strong></h2>
+                
+                <a mdbBtn (click)="goToCreatePost()"color="white"color="cyan"  class="waves-light" mdbWavesEffect>
+                  <mdb-icon fas icon="clone" class="left" ></mdb-icon>Create Question
+                </a>
+                <a mdbBtn (click)="goToCreateSubquery()" color="white" color="cyan" class="waves-light" mdbWavesEffect>
+                    <mdb-icon fas icon="clone" class="left"></mdb-icon>Create SubQuery
+                  </a>
+              </div>
+            </div>
+          </mdb-card>
+    
     </div>
-    <div>
-        <button class="mybutton m-2" mat-raised-button color="primary" (click)="goToCreateSubquery()">Create Subquery</button>        
-    </div>
+    
 </mat-card>
