--- a/src/app/components/subquery/list-subquery/list-subquery.component.html
+++ b/src/app/components/subquery/list-subquery/list-subquery.component.html
@@ -1,19 +1,26 @@
 <div class="container">
     <div class="row">
-        <div class="col">
-            <ul class="list-group">
-                <li *ngFor="let s of subquery" class="list-group-item">
-                    <a routerLink ="">{{ s.name }}</a>
-                </li>
-                <ul class="list-group">
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Morbi leo risus</li>
-                    <li class="list-group-item">Porta ac consectetur ac</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                  </ul>
+        <div class="col-md-0"></div>
+        <div class="col-md-8 mt-5">
+            <div >
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                      <h1 class="display-4" style="text-align: center; font-weight: bold;">Subquery List</h1>
+                      <ul class="list-group">
+                        <li *ngFor="let s of subquery" class="list-group-item">
+                            <a routerLink ="">{{ s.name }}</a>
+                        </li>
+                      </ul>
+                     
+                    </div>
+                  </div>
                 
-              </ul>
+            </div>
+            
+        </div>
+        <div class="col-md-4">
+            <app-side-bar></app-side-bar>
+            <app-subquery-side-bar></app-subquery-side-bar>
         </div>
     </div>
 </div>
