--- a/src/app/components/shared/subquery-side-bar/subquery-side-bar.component.html
+++ b/src/app/components/shared/subquery-side-bar/subquery-side-bar.component.html
@@ -8,6 +8,6 @@
         
     </li>
     <div  style="text-align: center;  margin-top: 10px;" *ngIf="displayAll">
-        <a style="font-weight: bold;" routerLink="/view-subquery">View All</a>
+        <a style="font-weight: bold;" routerLink="/list-subquery">View All</a>
     </div>
 </mat-card>
