--- a/src/app/components/shared/all-users/all-users.component.html
+++ b/src/app/components/shared/all-users/all-users.component.html
@@ -9,29 +9,18 @@
     <div class="row">
         <div class="col d-flex justify-content" *ngFor="let users of users">
             <mdb-card  class="card p-4 m-3 col">
-                <!-- Card image
-                <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap"></mdb-card-img>
-                Card content -->
-                <div style="height: 50%;">
-
-                </div>
                 <mdb-card-body>
-              
-                  <!--Title-->
-                  <mdb-card-title>
-                    <h4>{{ users.firstName }}  {{ users.lastName }}</h4>
-                  </mdb-card-title>
-              
-                  <!--Text-->
-                  <mdb-card-text> 
-                      {{ users.username }}
-                      {{ users.email }}
-                  </mdb-card-text>
-              
-                  <a href="#" mdbBtn class="d-flex" color="primary" style="align-items: center; justify-content: center;" mdbWavesEffect>view Profile</a>
+                    <div class="d-flex flex-column align-items-center text-center">
+                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                        <div class="mt-3">
+                          <h4>{{ users.firstName }}  {{ users.lastName }}</h4>
+                          <p class="text-secondary mb-1">{{ users.username }}</p>
+                          <p class="text-muted font-size-sm">{{ users.email }}</p>
+                          <button (click)="viewProfile(users.userId)" mdbBtn class="btn btn-primary" mdbWavesEffect>view Profile</button>
+                        </div>
+                      </div>
                 </mdb-card-body>
             </mdb-card>
-
         </div>
     </div>
 </div>
