--- a/src/app/components/Post/view-post/view-post.component.html
+++ b/src/app/components/Post/view-post/view-post.component.html
@@ -16,7 +16,7 @@
           <mat-card-content>
             <hr />
             <div class="post-title">
-              <a class="postname" href="{{post.url}}" class="post-title">{{post.postName}}</a>
+              <a class="postname" class="post-title text-primary">{{post.postName}}</a>
             </div>
             <div>
               <p class="post-text" [innerHtml]="post.description"></p>
