--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -12,16 +12,16 @@
           <a href="/home" class="nav-link waves-light" routerLink="home" mdbWavesEffect>Home</a>
         </li>
         <li class="nav-item">
-          <a href="/admin" class="nav-link waves-light" routerLink="admin"*ngIf="showAdminBoard" mdbWavesEffect>admin<span class="sr-only">(current)</span></a>
+          <a href="/admin" class="nav-link waves-light" routerLink="admin"*ngIf="showAdminBoard" mdbWavesEffect>Admin<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a href="/user" class="nav-link waves-light" routerLink="user" mdbWavesEffect>Home</a>
+          <a href="/user" class="nav-link waves-light" routerLink="user" mdbWavesEffect>Dashbord</a>
         </li>
         <li class="nav-item">
-          <a href="/view-subquery" class="nav-link waves-light" routerLink="list-subquery" mdbWavesEffect>view subquery</a>
+          <a href="/view-subquery" class="nav-link waves-light" routerLink="list-subquery" mdbWavesEffect>View Subquery</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link waves-light" routerLink="view-all-users" mdbWavesEffect>view Users</a>
+          <a class="nav-link waves-light" routerLink="view-all-users" mdbWavesEffect>View Users</a>
         </li> 
       </ul>
       <!-- Links -->
