--- a/src/app/components/shared/post-look/post-look.component.html
+++ b/src/app/components/shared/post-look/post-look.component.html
@@ -1,5 +1,5 @@
 <!-- Display Posts-->
-<mat-card class="row  post" *ngFor="let post of posts.slice().reverse()" >
+<mat-card class="row  post" *ngFor="let post of posts.slice().reverse()|paginate:{ itemsPerPage:6,currentPage:p};let i = index" >
 
 
   <!-- Section to Display Post Information-->
@@ -17,7 +17,7 @@
         <mat-card-content style="margin-top: 30px">
           <hr />
           <div class="post-title">
-            <a class="postname" >{{post.postName}}</a>
+            <a class="postname text-primary" >{{post.postName}}</a>
           </div>
           <div class="" style="margin-top: 20px">
             <h4>Important url</h4>
@@ -41,3 +41,4 @@
     </div>
   </div>
 </mat-card>
+<pagination-controls (pageChange)="p = $event"></pagination-controls>
