--- a/src/app/components/User/my-profile/my-profile.component.html
+++ b/src/app/components/User/my-profile/my-profile.component.html
@@ -17,6 +17,7 @@
         </div>
         <div class="col-md-4">
             <app-side-bar></app-side-bar>
+            <app-ads></app-ads>
         </div>
     </div>
 </div>
