--- a/src/app/components/User/user-profile/user-profile.component.html
+++ b/src/app/components/User/user-profile/user-profile.component.html
@@ -18,12 +18,12 @@
           <mat-card-content style="margin-top: 30px">
             <div class="row gutters-sm">
              
-              <div class="col-md-12" style="width: fit-content; ">
-                <div class="card" style="border: 1px solid grey;">
+              <div class="col-md-12 align-items-center justify-content-center d-flex" style="width: fit-content; ">
+                <div class="card col d-flex justify-content-center" style="border: 1px solid grey;"  >
                   <div class="card-body">
                     <div class="row">
                       <div class="col-sm-3">
-                        <h6 class="mb-0">First Name</h6>
+                        <h3 class="mb-0">First Name</h3>
                       </div>
                       <div class="col-sm-9 text-secondary">
                         {{ userDetails.firstName }}
@@ -32,7 +32,7 @@
                     <hr>
                     <div class="row">
                       <div class="col-sm-3">
-                        <h6 class="mb-0">Last Name</h6>
+                        <h3 class="mb-0">Last Name</h3>
                       </div>
                       <div class="col-sm-9 text-secondary">
                         {{ userDetails.lastName }}
@@ -41,7 +41,7 @@
                     <hr>
                     <div class="row">
                       <div class="col-sm-3">
-                        <h6 class="mb-0">Username</h6>
+                        <h3 class="mb-0">Username</h3>
                       </div>
                       <div class="col-sm-9 text-secondary">
                         {{ userDetails.username }}
@@ -50,7 +50,7 @@
                     <hr>
                     <div class="row">
                       <div class="col-sm-3">
-                        <h6 class="mb-0">Email</h6>
+                        <h3 class="mb-0">Email</h3>
                       </div>
                       <div class="col-sm-9 text-secondary">
                         {{ userDetails.email }}
@@ -59,7 +59,7 @@
                     <hr>
                     <div class="row">
                       <div class="col-sm-3">
-                        <h6 class="mb-0">Role</h6>
+                        <h3 class="mb-0">Role</h3>
                       </div>
                       <div class="col-sm-9 text-secondary">
                         {{ userDetails.whoAreYou }}
