--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,6 +1,4 @@
-<div class="container-fluid m-0 p-0">
-  <div class="row">
-    <div class="col">
+
       <!-- Footer -->
       <footer class="page-footer font-small unique-color-dark">
 
@@ -12,7 +10,7 @@
 
               <!-- Grid column -->
               <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-                <h6 class="mb-0">Get connected with us on social networks!</h6>
+                <h4 class="mb-0">Get Connected With Us</h4>
               </div>
               <!-- Grid column -->
 
@@ -59,11 +57,9 @@
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 
               <!-- Content -->
-              <h6 class="text-uppercase font-weight-bold">Company name</h6>
+              <h4 class="text-uppercase font-weight-bold">AskMe.com</h4>
               <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-              <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-                consectetur
-                adipisicing elit.</p>
+              <p>Here you can Ask your questions and get dought and problem solved with our experts!!!</p>
 
             </div>
             <!-- Grid column -->
@@ -72,19 +68,19 @@
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
               <!-- Links -->
-              <h6 class="text-uppercase font-weight-bold">Products</h6>
+              <h4 class="text-uppercase font-weight-bold">Important</h4>
               <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
               <p>
-                <a href="#!">MDBootstrap</a>
+                <a href="#!" routerLink="/list-subquery">Squbquery</a>
               </p>
               <p>
-                <a href="#!">MDWordPress</a>
+                <a href="#!" routerLink="/user" >Posts</a>
               </p>
               <p>
-                <a href="#!">BrandFlow</a>
+                <a href="#!"  routerLink="/view-all-users">User</a>
               </p>
               <p>
-                <a href="#!">Bootstrap Angular</a>
+                <a href="#!" routerLink="/">Home</a>
               </p>
 
             </div>
@@ -94,16 +90,16 @@
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 
               <!-- Links -->
-              <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+              <h4 class="text-uppercase font-weight-bold">Useful links</h4>
               <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
               <p>
-                <a href="#!">Your Account</a>
+                <a href="#!">About Us</a>
               </p>
               <p>
-                <a href="#!">Become an Affiliate</a>
+                <a href="#!">Contact Us</a>
               </p>
               <p>
-                <a href="#!">Shipping Rates</a>
+                <a href="#!">dgtgh</a>
               </p>
               <p>
                 <a href="#!">Help</a>
@@ -116,13 +112,13 @@
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
 
               <!-- Links -->
-              <h6 class="text-uppercase font-weight-bold">Contact</h6>
+              <h4 class="text-uppercase font-weight-bold">Contact</h4>
               <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
               <p>
-                <i class="fas fa-home mr-3"></i> New York, NY 10012, US
+                <i class="fas fa-home mr-3"></i> CDAC JUHU, Mumbai
               </p>
               <p>
-                <i class="fas fa-envelope mr-3"></i> info@example.com
+                <i class="fas fa-envelope mr-3"></i> info@AskMe.com
               </p>
               <p>
                 <i class="fas fa-phone mr-3"></i> + 01 234 567 88
@@ -148,6 +144,4 @@
 
       </footer>
       <!-- Footer -->
-    </div>
-  </div>
-</div>
+ 
