--- a/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/src/app/components/user-dashboard/user-dashboard.component.html
@@ -6,6 +6,7 @@
         <div class="col-md-4">
             <app-side-bar></app-side-bar>
             <app-subquery-side-bar></app-subquery-side-bar>
+            <app-ads></app-ads>
         </div>
     </div>
 </div>
