--- a/src/app/components/User/my-post/my-post.component.html
+++ b/src/app/components/User/my-post/my-post.component.html
@@ -7,7 +7,7 @@
   </ol>
 </nav>
 <!-- Display Posts-->
-<mat-card class="row mt-4 post" *ngFor="let post of posts.slice().reverse()" >
+<mat-card class="row mt-4 post" *ngFor="let post of posts.slice().reverse()|paginate:{ itemsPerPage:6,currentPage:p};let i = index" >
 
 
     <!-- Section to Display Post Information-->
@@ -24,8 +24,8 @@
           </span>
           <mat-card-content style="margin-top: 30px">
             <hr />
-            <div class="post-title">
-              <a class="postname" >{{post.postName}}</a>
+            <div class="post-title ">
+              <a class="postname  text-primary" style="line-height: 1.3;" >{{post.postName}}</a>
             </div>
             <div class="" style="margin-top: 20px">
               <h4>Important url</h4>
@@ -48,4 +48,7 @@
         </div>
       </div>
     </div>
+
   </mat-card>
+
+  <pagination-controls (pageChange)="p = $event"></pagination-controls>
