--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,39 +1,484 @@
 <div class="container-fluid p-0 m-0">
-    <div class="row">
-        <div class="col">
-            <!--Main Navigation-->
-<header class="intro-header">
-    <!-- Intro Section -->
-    <div class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url(https://mdbootstrap.com/img/Photos/Others/img%20%2848%29.jpg);">
-      <div class="full-bg-img mask rgba-black-light">
-        <div class="container ">
-          <div class="row pt-5 mt-5 w-100" style="padding-top: 300px;">
-            <div class="col-md-12" style="padding-top: 150px;">
-              <div class=" text-center">
-                <h2 class="h1  h1-reponsive white-text font-up font-bold mb-3 wow fadeInDown" data-wow-delay="0.3s"><strong>Minimalist
-                    intro</strong></h2>
-                <hr class="hr-light mt-4 wow fadeInDown" data-wow-delay="0.4s">
-                <h5 class="font-up mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Photography &
-                    design</strong></h5>
-                <a mdbBtn color="white"  class="wow fadeInDown waves-light" data-wow-delay="0.4s"
-                  mdbWavesEffect>portfolio</a>
-                <a mdbBtn color="white"class="wow fadeInDown waves-light" data-wow-delay="0.4s"
-                  mdbWavesEffect>About me</a>
-              </div>
-            </div>
+  <div class="row">
+    <div class="col">
+      <!--Slider-->
+      <div id="carouselExampleFade" class="carousel slide carousel-fade p-0 m-0" data-ride="carousel" style="margin: 0;height: 600px;">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100 h-300" style="color: black;object-fit: fill;" src="https://www.voozon.com/wp-content/uploads/2020/09/1557364192-work_while_you_study_banner.jpg"
+              alt="First slide" />
           </div>
+         
         </div>
       </div>
+      <!--//Slider-->
     </div>
-  
-  </header>
-  <!--Main Navigation-->
+  </div>
+  <div class="row p-5" style="margin-top: 100px; ">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
+      <!--Section: Best Features-->
+      <section id="best-features" class="text-center">
+
+        <!-- Heading -->
+        <h2 class="mb-5 font-weight-bold">Best Features</h2>
+
+        <!--Grid row-->
+        <div class="row d-flex justify-content-center mb-4">
+
+          <!--Grid column-->
+          <div class="col-md-8">
+
+            <!-- Description -->
+            <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptate
+              hic
+              provident nulla repellat
+              facere esse molestiae ipsa labore porro minima quam quaerat rem, natus repudiandae debitis
+              est
+              sit pariatur.</p>
+
+          </div>
+          <!--Grid column-->
 
         </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <app-footer></app-footer>
+        <!--Grid row-->
+
+        <!--Grid row-->
+        <div class="row">
+
+          <!--Grid column-->
+          <div class="col-md-4 mb-5">
+            <i class="fa fa-question fa-4x orange-text"></i>
+            <h4 class="my-4 font-weight-bold">Q & A</h4>
+            <p class="grey-text">Best Q & A System for students and faculty adipisicing elit. Reprehenderit
+              maiores nam,
+              aperiam minima
+              assumenda deleniti hic.</p>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-4 mb-1">
+            <i class="fas fa-comments fa-4x orange-text"></i>
+            <h4 class="my-4 font-weight-bold">Solution</h4>
+            <p class="grey-text">Get solution as fast as possible consectetur adipisicing elit. Reprehenderit
+              maiores nam,
+              aperiam minima
+              assumenda deleniti hic.</p>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-4 mb-1">
+            <i class="fas fa-hand-point-up fa-4x orange-text"></i>
+            <h4 class="my-4 font-weight-bold">UpVote</h4>
+            <p class="grey-text">Vote Best Questions consectetur adipisicing elit. Reprehenderit
+              maiores nam,
+              aperiam minima
+              assumenda deleniti hic.</p>
+          </div>
+          <!--Grid column-->
+
         </div>
+        <!--Grid row-->
+
+      </section>
+      <!--Section: Best Features-->
+
+      <hr class="my-5">
+    
+
+
+       <!--Section: Main features & Quick Start-->
+    <section>
+
+      <h3 class="h3 text-center mb-5">Why AskMe.com</h3>
+
+      <!--Grid row-->
+      <div class="row wow fadeIn">
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-md-12 px-4">
+
+          <!--First row-->
+          <div class="row">
+            <div class="col-1 mr-3">
+              <i class="fas fa-code fa-2x indigo-text"></i>
+            </div>
+            <div class="col-10">
+              <h5 class="feature-title">Coding </h5>
+              <p class="grey-text">Solve Your all coding related questions free of cost</p>
+            </div>
+          </div>
+          <!--/First row-->
+
+          <div style="height:30px"></div>
+
+          <!--Second row-->
+          <div class="row">
+            <div class="col-1 mr-3">
+              <i class="fas fa-book fa-2x blue-text"></i>
+            </div>
+            <div class="col-10">
+              <h5 class="feature-title">Detailed documentation</h5>
+              <p class="grey-text">We give you detailed user-friendly documentation at your disposal. It will help you
+                to implement your ideas
+                easily.
+              </p>
+            </div>
+          </div>
+          <!--/Second row-->
+
+          <div style="height:30px"></div>
+
+          <!--Third row-->
+          <div class="row">
+            <div class="col-1 mr-3">
+              <i class="fas fa-graduation-cap fa-2x cyan-text"></i>
+            </div>
+            <div class="col-10">
+              <h5 class="feature-title">Lots of tutorials</h5>
+              <p class="grey-text">We care about the development of our users. We have prepared numerous tutorials,
+                which allow you to learn
+ other technologies.</p>
+            </div>
+          </div>
+          <!--/Third row-->
+
+        </div>
+        <!--/Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-md-12">
+
+          <p class="h5 text-center mb-4">Watch our "5 min Quick Start" tutorial</p>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6Pa7PCfXCkE" allowfullscreen></iframe>
+          </div>
+        </div>
+        <!--/Grid column-->
+      </div>
+      <!--/Grid row-->
+
+    </section>
+    <!--Section: Main features & Quick Start-->
+
+
+    <hr class="my-5">
+
+    <!--Section: Not enough-->
+    <section>
+
+      <h2 class="my-5 h3 text-center">Not enough?</h2>
+
+      <!--First row-->
+      <div class="row features-small mb-5 mt-3 wow fadeIn">
+
+        <!--First column-->
+        <div class="col-md-4">
+          <!--First row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fas fa-check-circle fa-2x indigo-text"></i>
+            </div>
+            <div class="col-10">
+              <h4 class="feature-title">Free for personal and commercial use</h4>
+              <p class="grey-text">Our license is user-friendly. Feel free to use Askme for both private as well as
+                commercial projects.
+              </p>
+              <div style="height:15px"></div>
+            </div>
+          </div>
+          <!--/First row-->
+
+          <!--Second row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fas fa-check-circle fa-2x indigo-text"></i>
+            </div>
+            <div class="col-10">
+              <h4 class="feature-title">400+ Question Solved</h4>
+              <p class="grey-text">An impressive collection of flexible components allows you to develop any project.
+              </p>
+              <div style="height:15px"></div>
+            </div>
+          </div>
+          <!--/Second row-->
+
+          <!--Third row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fas fa-check-circle fa-2x indigo-text"></i>
+            </div>
+            <div class="col-10">
+              <h4 class="feature-title">600+ Users</h4>
+              <p class="grey-text">Happy Users more then 600</p>
+              <div style="height:15px"></div>
+            </div>
+          </div>
+          <!--/Third row-->
+
+          <!--Fourth row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fas fa-check-circle fa-2x indigo-text"></i>
+            </div>
+            <div class="col-10">
+              <h6 class="feature-title">Fully profictonal</h6>
+              <p class="grey-text">It doesn't matter whether your project will be displayed on desktop, laptop, tablet
+                or mobile phone. MDB
+                looks great on each screen.</p>
+              <div style="height:15px"></div>
+            </div>
+          </div>
+          <!--/Fourth row-->
+        </div>
+        <!--/First column-->
+
+        <!--Second column-->
+        <div class="col-md-4 flex-center">
+          <img src="https://mdbootstrap.com/img/Others/screens.png" alt="MDB Magazine Template displayed on iPhone"
+            class="z-depth-0 img-fluid">
+        </div>
+        <!--/Second column-->
+
+        <!--Third column-->
+        <div class="col-md-4 mt-2">
+          <!--First row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fas fa-check-circle fa-2x indigo-text"></i>
+            </div>
+            <div class="col-10">
+              <h6 class="feature-title">Highly Professional</h6>
+              <p class="grey-text">Neat and easy to use animations, which will increase the interactivity of your
+                project and delight your visitors.
+              </p>
+              <div style="height:15px"></div>
+            </div>
+          </div>
+          <!--/First row-->
+
+          <!--Second row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fas fa-check-circle fa-2x indigo-text"></i>
+            </div>
+            <div class="col-10">
+              <h6 class="feature-title">Plenty of useful doubts</h6>
+              <p class="grey-text">Need inspiration? Use one of our predefined templates for free.</p>
+              <div style="height:15px"></div>
+            </div>
+          </div>
+          <!--/Second row-->
+
+          <!--Third row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fas fa-check-circle fa-2x indigo-text"></i>
+            </div>
+            <div class="col-10">
+              <h6 class="feature-title">Easy To Used</h6>
+              <p class="grey-text">5 minutes, a few clicks and... done. You will be surprised at how easy it is.
+              </p>
+              <div style="height:15px"></div>
+            </div>
+          </div>
+          <!--/Third row-->
+
+          <!--Fourth row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fas fa-check-circle fa-2x indigo-text"></i>
+            </div>
+            <div class="col-10">
+              <h6 class="feature-title">Easy to use and customize</h6>
+              <p class="grey-text">Using MDB is straightforward and pleasant. Components flexibility allows you deep
+                customization. You will
+                easily adjust each component to suit your needs.</p>
+              <div style="height:15px"></div>
+            </div>
+          </div>
+          <!--/Fourth row-->
+        </div>
+        <!--/Third column-->
+
+      </div>
+      <!--/First row-->
+
+    </section>
+    <!--Section: Not enough-->
+
+    <hr class="mb-5">
+
+    <!--Section: More-->
+    <section>
+
+      <h2 class="my-5 h3 text-center">...and even more</h2>
+
+      <!--First row-->
+      <div class="row features-small mt-5 wow fadeIn">
+
+        <!--Grid column-->
+        <div class="col-xl-3 col-lg-6">
+          <!--Grid row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fab fa-firefox fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+            </div>
+            <div class="col-10 mb-2 pl-3">
+              <h5 class="feature-title font-bold mb-1">Cross-browser compatibility</h5>
+              <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers;
+                all browsers love MDB.
+              </p>
+            </div>
+          </div>
+          <!--/Grid row-->
+        </div>
+        <!--/Grid column-->
+
+        <!--Grid column-->
+        <div class="col-xl-3 col-lg-6">
+          <!--Grid row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fab fa-java fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+          
+            </div>
+            <div class="col-10 mb-2">
+              <h5 class="feature-title font-bold mb-1">JAVA</h5>
+              <p class="grey-text mt-2">MDB becomes better every month. We love the project and enhance as much as
+                possible.
+              </p>
+            </div>
+          </div>
+          <!--/Grid row-->
+        </div>
+        <!--/Grid column-->
+
+        <!--Grid column-->
+        <div class="col-xl-3 col-lg-6">
+          <!--Grid row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fab fa-angular fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+            </div>
+            <div class="col-10 mb-2">
+              <h5 class="feature-title font-bold mb-1">Angular</h5>
+              <p class="grey-text mt-2">Our society grows day by day. Visit our forum and check how it is to be a part
+                of our family.
+              </p>
+            </div>
+          </div>
+          <!--/Grid row-->
+        </div>
+        <!--/Grid column-->
+
+        <!--Grid column-->
+        <div class="col-xl-3 col-lg-6">
+          <!--Grid row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fas fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+            </div>
+            <div class="col-10 mb-2">
+              <h5 class="feature-title font-bold mb-1">jQuery 3.x</h5>
+              <p class="grey-text mt-2">MDB is integrated with newest jQuery. Therefore you can use all the latest
+                features which come along with
+                it.
+              </p>
+            </div>
+          </div>
+          <!--/Grid row-->
+        </div>
+        <!--/Grid column-->
+
+      </div>
+      <!--/First row-->
+
+      <!--Second row-->
+      <div class="row features-small mt-4 wow fadeIn">
+
+        <!--Grid column-->
+        <div class="col-xl-3 col-lg-6">
+          <!--Grid row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fab fa-react fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+            </div>
+            <div class="col-10 mb-2">
+              <h5 class="feature-title font-bold mb-1">React</h5>
+              <p class="grey-text mt-2">Material Design for Bootstrap comes with both, compiled, ready to use libraries
+                including all features as
+                well as modules for CSS (SASS files) and JS.</p>
+            </div>
+          </div>
+          <!--/Grid row-->
+        </div>
+        <!--/Grid column-->
+
+        <!--Grid column-->
+        <div class="col-xl-3 col-lg-6">
+          <!--Grid row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fab fa-js fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+            </div>
+            <div class="col-10 mb-2">
+              <h5 class="feature-title font-bold mb-1">Java Script</h5>
+              <p class="grey-text mt-2">We care about reliability. If you have any questions - do not hesitate to
+                contact us.
+              </p>
+            </div>
+          </div>
+          <!--/Grid row-->
+        </div>
+        <!--/Grid column-->
+
+        <!--Grid column-->
+        <div class="col-xl-3 col-lg-6">
+          <!--Grid row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="fab fa-python fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+            </div>
+            <div class="col-10 mb-2">
+              <h5 class="feature-title font-bold mb-1">Python</h5>
+              <p class="grey-text mt-2">MDB fully supports Flex Box. You can forget about alignment issues.</p>
+            </div>
+          </div>
+          <!--/Grid row-->
+        </div>
+        <!--/Grid column-->
+
+        <!--Grid column-->
+        <div class="col-xl-3 col-lg-6">
+          <!--Grid row-->
+          <div class="row">
+            <div class="col-2">
+              <i class="far fa-file-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+            </div>
+            <div class="col-10 mb-2">
+              <h5 class="feature-title font-bold mb-1">SASS files</h5>
+              <p class="grey-text mt-2">Arranged and well documented .scss files can't wait until you compile them.</p>
+            </div>
+          </div>
+          <!--/Grid row-->
+        </div>
+        <!--/Grid column-->
+
+      </div>
+      <!--/Second row-->
+
+    </section>
+    <!--Section: More-->
+    
     </div>
+    <div class="col-md-1"></div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <app-footer></app-footer>
+    </div>
+  </div>
 </div>
