--- a/src/app/components/shared/post-look/post-look.component.html
+++ b/src/app/components/shared/post-look/post-look.component.html
@@ -17,7 +17,7 @@
         <mat-card-content style="margin-top: 30px">
           <hr />
           <div class="post-title">
-            <a class="postname text-primary" >{{post.postName}}</a>
+            <a class="postname text-primary" style="word-wrap: break-word;line-height: 1.5;" >{{post.postName}}</a>
           </div>
           <div class="" style="margin-top: 20px">
             <h4>Important url</h4>
