--- a/src/app/components/shared/post-look/post-look.component.scss
+++ b/src/app/components/shared/post-look/post-look.component.scss
@@ -7,7 +7,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     overflow: hidden;
-    background-color: rgba(255,255,255,0.8);
+    background: white;
     color: #878A8C;
     position: relative;
     border-radius: 4px;
