--- a/src/app/components/subquery/create-subquery/create-subquery.component.html
+++ b/src/app/components/subquery/create-subquery/create-subquery.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
-      <div class="col-md-3"></div>
-        <mat-card class="col-md-6 main mt-5">
-          <div class="row">
+      <div class="col-md-0"></div>
+        <mat-card class="col-md-8 main mt-5">
+          <div class="row justify-content-center" >
             <form 
             (ngSubmit)="createSubquery()"
             class="example-form">
@@ -41,6 +41,9 @@
             </form>
           </div>
         </mat-card>
-      <div class="col-md-3"></div>
+      <div class="col-md-4 mt-5">
+        <app-post-sidebar-two></app-post-sidebar-two>
+        <app-subquery-side-bar></app-subquery-side-bar>
+      </div>
     </div>
 </div>
