--- a/src/app/components/subquery/view-subquery/view-subquery.component.html
+++ b/src/app/components/subquery/view-subquery/view-subquery.component.html
@@ -2,12 +2,12 @@
     <div class="row mt-3">
         <div class="col-md-0"></div>
         <div class="col-md-8">
-            <div class="jumbotron">
-                <div class="container">
+            <mat-card class=""  style="width: 100%;">
+                <div class="" style="width: 100%;">
                     <h1 class="display-4" style="font-weight: bold;">Subquery Name : {{ subquery.name }} </h1>
                     <p>Subquery Description :{{ subquery.description }}</p>
                 </div>
-            </div>
+            </mat-card>
             <!-- Display Posts-->
             <mat-card class="row  post" *ngFor="let post of posts.slice().reverse()">
 
@@ -15,7 +15,7 @@
                 <!-- Section to Display Post Information-->
                 <div class="col-md-10  col-sd-12" style="width: 100%;">
                     <div class="row">
-                        <div class="col-md-1 col-2" style="background:  #F8F9FA">
+                        <div class="col-md-1 col-2">
                             <app-vote-button [post]="post"></app-vote-button>
                         </div>
                         <div class="col-md-10 col-9" style="margin-top: 20px;margin-left: 15px; padding-left: 0px;">
@@ -55,6 +55,9 @@
                 </div>
             </mat-card>
         </div>
-        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <app-post-sidebar-two></app-post-sidebar-two>
+            <app-subquery-side-bar></app-subquery-side-bar>
+        </div>
     </div>
 </div>
