--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -93,13 +93,13 @@
               <h4 class="text-uppercase font-weight-bold">Useful links</h4>
               <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
               <p>
-                <a href="#!">About Us</a>
+                <a href="#!" routerLink="/about-us">About Us</a>
               </p>
               <p>
-                <a href="#!">Contact Us</a>
+                <a href="#!" routerLink="/contact-us">Contact Us</a>
               </p>
               <p>
-                <a href="#!">dgtgh</a>
+                <a href="#!" routerLink="/about-us">dgtgh</a>
               </p>
               <p>
                 <a href="#!">Help</a>
